# ITIS-3300-Blog

./: .gitignore  app.py  build_production.sh  package.json  pyproject.toml  run_development.sh  run_production.sh  webpack.config.js
blog/: __init__.py
static/scss/: article.scss  base.scss  index.scss
templates/: article.html  base.html  index.html
templates/articles/: agile_approach_risk.html  agile_approach_risk.json  agile_comm_approach.html  agile_comm_approach.json  agile_project_procurement.html  agile_project_procurement.json  agile_visualization.html  agile_visualization.json  agile_vs_waterfall.html  agile_vs_waterfall.json  benefits_of_agile.html  benefits_of_agile.json  developing_resource_plan.html  developing_resource_plan.json  estimating_costs.html  estimating_costs.json  example_article.html  example_article.json  good_communication.html  good_communication.json  motivation_theories.html  motivation_theories.json  optimizing_resources.html  optimizing_resources.json  principles_of_agile.html  principles_of_agile.json  procurement_approach.html  procurement_approach.json  project_scope_management.html  project_scope_management.json  quality_management.html  quality_management.json  when_to_use_agile.html  when_to_use_agile.json
